--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
   <meta charset="utf-8">
   <title>Module 4 Solution Starter</title>
@@ -9,5 +9,6 @@
 </head>
 <body>
   <h1>Module 4 Solution Starter</h1>
+  <p> Open the console to see the output</p>
 </body>
 </html>
